--- a/src/components/Viewer.css
+++ b/src/components/Viewer.css
@@ -7,7 +7,7 @@
 .image{
     width:50vw;
     height:auto;
-    border-radius: 50px;
+    border-radius: 5%;
 }
 
 .description{
@@ -18,9 +18,8 @@
 }
 
 .thumbnail-image{
-    width:100px;
-    height:100px;
-    padding:0 0.2vw;
+    width:10vw;
+    height:10vw;
     border-radius: 20px;
 }
 
@@ -38,28 +37,25 @@
 .thumb {
     background-size: contain;
     cursor: pointer;
-    width: 80px;
-    height: 80px;
   }
 
 .play{
    display: flex;
-   gap:10vw;
+   gap:8vw;
 }
 
 .slides{
     display: flex;
     align-items: start;
-    padding:0 5vw;
 }
 
 .playing{
-    width:10vw;
-    height: 5vw;
+    width:8vw;
+    height:5vw;
     background-color: white;
     color:skyblue;
     border:none;
-    font-size: 5rem;
+    font-size: 8vw;
 }
 
 .icon-only{
@@ -67,4 +63,15 @@
     background-color: white;
     font-size:3rem;
     text-align: center;
+}
+
+@media (max-width:796px){
+    .image,.description{
+        width:90vw;
+        padding:1vw;
+    }
+    .container,.play{
+        flex-direction: column;
+        align-items:center;
+    }
 }
